# andrejkarpathy

./: pyproject.toml
.ipynb_checkpoints/: zero_to_hero_1-checkpoint.ipynb
notebooks/: train_gpt2.py  zero_to_hero_1.ipynb  zero_to_hero_2.ipynb  zero_to_hero_3.ipynb  zero_to_hero_4.ipynb  zero_to_hero_5.ipynb  zero_to_hero_6.ipynb  zero_to_hero_7.ipynb  zero_to_hero_8.ipynb  zero_to_hero_9.ipynb
notebooks/nanogpt/: train.py  v2.py
